codigo/src/sintatic.output
State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: ini $end

    1 ini: program

    2 program: function_definition
    3        | function_definition program
    4        | variables_declaration program

    5 function_definition: function_declaration parameters function_body

    6 $@1: %empty

    7 function_definition: error $@1 parameters function_body
    8                    | function_declaration error function_body

    9 function_declaration: type_identifier "id"

   10 function_body: '{' statments '}'

   11 parameters: '(' parameters_list ')'
   12           | '(' ')'

   13 parameters_list: parameter ',' parameters_list
   14                | parameter

   15 parameter: type_identifier "id"
   16          | type_identifier "id" '[' ']'

   17 type_identifier: "arrayOp" "arrayType"
   18                | "type"

   19 statments: statment statments

   20 $@2: %empty

   21 statments: '{' $@2 statments '}'
   22          | statment

   23 statment: variables_declaration
   24         | retrn
   25         | conditional
   26         | loop
   27         | expression ';'
   28         | read
   29         | write
   30         | error

   31 read: "read" "id" ';'

   32 write: "write" "id" ';'

   33 $@3: %empty

   34 function_call: "id" $@3 '(' arguments ')'

   35 arguments: arguments_list
   36          | %empty

   37 arguments_list: arguments_list ',' expression
   38               | expression

   39 $@4: %empty

   40 conditional: if '{' statments '}' $@4 else_if
   41            | if '{' statments '}'

   42 if: "if" '(' expression ')'

   43 else_if: "else" conditional

   44 $@5: %empty

   45 else_if: "else" $@5 '{' statments '}'

   46 $@6: %empty

   47 loop: "while" $@6 '(' expression ')' '{' statments '}'

   48 retrn: "return" expression ';'

   49 value: "id"
   50      | number
   51      | array_access
   52      | function_call

   53 array_access: "id" '[' expression ']'
   54             | "id" '[' expression ',' expression ']'

   55 variables_declaration: type_identifier identifiers_list ';'
   56                      | type_identifier error ';'
   57                      | error identifiers_list ';'

   58 identifiers_list: "id" ',' identifiers_list
   59                 | "id" '[' "integer" ']' ',' identifiers_list
   60                 | "id" '[' "integer" ']'
   61                 | "id"

   62 expression: "id" assignment expression
   63           | array_access assignment expression
   64           | expression_1

   65 expression_1: expression_2 "op1" expression_1
   66             | expression_2

   67 expression_2: expression_3 "op2" expression_2
   68             | expression_3

   69 expression_3: value "op3" expression_3
   70             | "uop" value
   71             | "uop" '(' expression ')'
   72             | value
   73             | '(' expression ')'

   74 assignment: "assignment"

   75 number: "integer"
   76       | "float"


Terminals, with rules where they appear

    $end (0) 0
    '(' <tok> (40) 11 12 34 42 47 71 73
    ')' <tok> (41) 11 12 34 42 47 71 73
    ',' <tok> (44) 13 37 54 58 59
    ';' <tok> (59) 27 31 32 48 55 56 57
    "assignment" <tok> (61) 74
    '[' <tok> (91) 16 53 54 59 60
    ']' <tok> (93) 16 53 54 59 60
    '{' <tok> (123) 10 21 40 41 45 47
    '}' <tok> (125) 10 21 40 41 45 47
    error (256) 7 8 30 56 57
    "integer" <tok> (258) 59 60 75
    "float" <tok> (259) 76
    "return" <tok> (260) 48
    "if" <tok> (261) 42
    "else" <tok> (262) 43 45
    "while" <tok> (263) 47
    "write" <tok> (264) 32
    "read" <tok> (265) 31
    "type" <tok> (266) 18
    "arrayType" <tok> (267) 17
    "arrayOp" <tok> (268) 17
    "id" <tok> (269) 9 15 16 31 32 34 49 53 54 58 59 60 61 62
    "op1" <tok> (270) 65
    "op2" <tok> (271) 67
    "op3" <tok> (272) 69
    "uop" <tok> (273) 70 71


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    ini <node> (29)
        on left: 1
        on right: 0
    program <node> (30)
        on left: 2 3 4
        on right: 1 3 4
    function_definition <node> (31)
        on left: 5 7 8
        on right: 2 3
    $@1 (32)
        on left: 6
        on right: 7
    function_declaration <node> (33)
        on left: 9
        on right: 5 8
    function_body <node> (34)
        on left: 10
        on right: 5 7 8
    parameters <node> (35)
        on left: 11 12
        on right: 5 7
    parameters_list <node> (36)
        on left: 13 14
        on right: 11 13
    parameter <node> (37)
        on left: 15 16
        on right: 13 14
    type_identifier <node> (38)
        on left: 17 18
        on right: 9 15 16 55 56
    statments <node> (39)
        on left: 19 21 22
        on right: 10 19 21 40 41 45 47
    $@2 (40)
        on left: 20
        on right: 21
    statment <node> (41)
        on left: 23 24 25 26 27 28 29 30
        on right: 19 22
    read <node> (42)
        on left: 31
        on right: 28
    write <node> (43)
        on left: 32
        on right: 29
    function_call <node> (44)
        on left: 34
        on right: 52
    $@3 (45)
        on left: 33
        on right: 34
    arguments <node> (46)
        on left: 35 36
        on right: 34
    arguments_list <node> (47)
        on left: 37 38
        on right: 35 37
    conditional <node> (48)
        on left: 40 41
        on right: 25 43
    $@4 (49)
        on left: 39
        on right: 40
    if <node> (50)
        on left: 42
        on right: 40 41
    else_if <node> (51)
        on left: 43 45
        on right: 40
    $@5 (52)
        on left: 44
        on right: 45
    loop <node> (53)
        on left: 47
        on right: 26
    $@6 (54)
        on left: 46
        on right: 47
    retrn <node> (55)
        on left: 48
        on right: 24
    value <node> (56)
        on left: 49 50 51 52
        on right: 69 70 72
    array_access <node> (57)
        on left: 53 54
        on right: 51 63
    variables_declaration <node> (58)
        on left: 55 56 57
        on right: 4 23
    identifiers_list <node> (59)
        on left: 58 59 60 61
        on right: 55 57 58 59
    expression <node> (60)
        on left: 62 63 64
        on right: 27 37 38 42 47 48 53 54 62 63 71 73
    expression_1 <node> (61)
        on left: 65 66
        on right: 64 65
    expression_2 <node> (62)
        on left: 67 68
        on right: 65 66 67
    expression_3 <node> (63)
        on left: 69 70 71 72 73
        on right: 67 68 69
    assignment <node> (64)
        on left: 74
        on right: 62 63
    number <node> (65)
        on left: 75 76
        on right: 50


State 0

    0 $accept: . ini $end
    1 ini: . program
    2 program: . function_definition
    3        | . function_definition program
    4        | . variables_declaration program
    5 function_definition: . function_declaration parameters function_body
    7                    | . error $@1 parameters function_body
    8                    | . function_declaration error function_body
    9 function_declaration: . type_identifier "id"
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"
   55 variables_declaration: . type_identifier identifiers_list ';'
   56                      | . type_identifier error ';'
   57                      | . error identifiers_list ';'

    error      shift, and go to state 1
    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3

    ini                    go to state 4
    program                go to state 5
    function_definition    go to state 6
    function_declaration   go to state 7
    type_identifier        go to state 8
    variables_declaration  go to state 9


State 1

    6 $@1: . %empty  ['(']
    7 function_definition: error . $@1 parameters function_body
   57 variables_declaration: error . identifiers_list ';'
   58 identifiers_list: . "id" ',' identifiers_list
   59                 | . "id" '[' "integer" ']' ',' identifiers_list
   60                 | . "id" '[' "integer" ']'
   61                 | . "id"

    "id"  shift, and go to state 10

    $default  reduce using rule 6 ($@1)

    $@1               go to state 11
    identifiers_list  go to state 12


State 2

   18 type_identifier: "type" .

    $default  reduce using rule 18 (type_identifier)


State 3

   17 type_identifier: "arrayOp" . "arrayType"

    "arrayType"  shift, and go to state 13


State 4

    0 $accept: ini . $end

    $end  shift, and go to state 14


State 5

    1 ini: program .

    $default  reduce using rule 1 (ini)


State 6

    2 program: . function_definition
    2        | function_definition .  [$end]
    3        | . function_definition program
    3        | function_definition . program
    4        | . variables_declaration program
    5 function_definition: . function_declaration parameters function_body
    7                    | . error $@1 parameters function_body
    8                    | . function_declaration error function_body
    9 function_declaration: . type_identifier "id"
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"
   55 variables_declaration: . type_identifier identifiers_list ';'
   56                      | . type_identifier error ';'
   57                      | . error identifiers_list ';'

    error      shift, and go to state 1
    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3

    $end  reduce using rule 2 (program)

    program                go to state 15
    function_definition    go to state 6
    function_declaration   go to state 7
    type_identifier        go to state 8
    variables_declaration  go to state 9


State 7

    5 function_definition: function_declaration . parameters function_body
    8                    | function_declaration . error function_body
   11 parameters: . '(' parameters_list ')'
   12           | . '(' ')'

    error  shift, and go to state 16
    '('    shift, and go to state 17

    parameters  go to state 18


State 8

    9 function_declaration: type_identifier . "id"
   55 variables_declaration: type_identifier . identifiers_list ';'
   56                      | type_identifier . error ';'
   58 identifiers_list: . "id" ',' identifiers_list
   59                 | . "id" '[' "integer" ']' ',' identifiers_list
   60                 | . "id" '[' "integer" ']'
   61                 | . "id"

    error  shift, and go to state 19
    "id"   shift, and go to state 20

    identifiers_list  go to state 21


State 9

    2 program: . function_definition
    3        | . function_definition program
    4        | . variables_declaration program
    4        | variables_declaration . program
    5 function_definition: . function_declaration parameters function_body
    7                    | . error $@1 parameters function_body
    8                    | . function_declaration error function_body
    9 function_declaration: . type_identifier "id"
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"
   55 variables_declaration: . type_identifier identifiers_list ';'
   56                      | . type_identifier error ';'
   57                      | . error identifiers_list ';'

    error      shift, and go to state 1
    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3

    program                go to state 22
    function_definition    go to state 6
    function_declaration   go to state 7
    type_identifier        go to state 8
    variables_declaration  go to state 9


State 10

   58 identifiers_list: "id" . ',' identifiers_list
   59                 | "id" . '[' "integer" ']' ',' identifiers_list
   60                 | "id" . '[' "integer" ']'
   61                 | "id" .  [';']

    '['  shift, and go to state 23
    ','  shift, and go to state 24

    $default  reduce using rule 61 (identifiers_list)


State 11

    7 function_definition: error $@1 . parameters function_body
   11 parameters: . '(' parameters_list ')'
   12           | . '(' ')'

    '('  shift, and go to state 17

    parameters  go to state 25


State 12

   57 variables_declaration: error identifiers_list . ';'

    ';'  shift, and go to state 26


State 13

   17 type_identifier: "arrayOp" "arrayType" .

    $default  reduce using rule 17 (type_identifier)


State 14

    0 $accept: ini $end .

    $default  accept


State 15

    3 program: function_definition program .

    $default  reduce using rule 3 (program)


State 16

    8 function_definition: function_declaration error . function_body
   10 function_body: . '{' statments '}'

    '{'  shift, and go to state 27

    function_body  go to state 28


State 17

   11 parameters: '(' . parameters_list ')'
   12           | '(' . ')'
   13 parameters_list: . parameter ',' parameters_list
   14                | . parameter
   15 parameter: . type_identifier "id"
   16          | . type_identifier "id" '[' ']'
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"

    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3
    ')'        shift, and go to state 29

    parameters_list  go to state 30
    parameter        go to state 31
    type_identifier  go to state 32


State 18

    5 function_definition: function_declaration parameters . function_body
   10 function_body: . '{' statments '}'

    '{'  shift, and go to state 27

    function_body  go to state 33


State 19

   56 variables_declaration: type_identifier error . ';'

    ';'  shift, and go to state 34


State 20

    9 function_declaration: type_identifier "id" .  [error, '(']
   58 identifiers_list: "id" . ',' identifiers_list
   59                 | "id" . '[' "integer" ']' ',' identifiers_list
   60                 | "id" . '[' "integer" ']'
   61                 | "id" .  [';']

    '['  shift, and go to state 23
    ','  shift, and go to state 24

    ';'       reduce using rule 61 (identifiers_list)
    $default  reduce using rule 9 (function_declaration)


State 21

   55 variables_declaration: type_identifier identifiers_list . ';'

    ';'  shift, and go to state 35


State 22

    4 program: variables_declaration program .

    $default  reduce using rule 4 (program)


State 23

   59 identifiers_list: "id" '[' . "integer" ']' ',' identifiers_list
   60                 | "id" '[' . "integer" ']'

    "integer"  shift, and go to state 36


State 24

   58 identifiers_list: . "id" ',' identifiers_list
   58                 | "id" ',' . identifiers_list
   59                 | . "id" '[' "integer" ']' ',' identifiers_list
   60                 | . "id" '[' "integer" ']'
   61                 | . "id"

    "id"  shift, and go to state 10

    identifiers_list  go to state 37


State 25

    7 function_definition: error $@1 parameters . function_body
   10 function_body: . '{' statments '}'

    '{'  shift, and go to state 27

    function_body  go to state 38


State 26

   57 variables_declaration: error identifiers_list ';' .

    $default  reduce using rule 57 (variables_declaration)


State 27

   10 function_body: '{' . statments '}'
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"
   19 statments: . statment statments
   21          | . '{' $@2 statments '}'
   22          | . statment
   23 statment: . variables_declaration
   24         | . retrn
   25         | . conditional
   26         | . loop
   27         | . expression ';'
   28         | . read
   29         | . write
   30         | . error
   31 read: . "read" "id" ';'
   32 write: . "write" "id" ';'
   34 function_call: . "id" $@3 '(' arguments ')'
   40 conditional: . if '{' statments '}' $@4 else_if
   41            | . if '{' statments '}'
   42 if: . "if" '(' expression ')'
   47 loop: . "while" $@6 '(' expression ')' '{' statments '}'
   48 retrn: . "return" expression ';'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   55 variables_declaration: . type_identifier identifiers_list ';'
   56                      | . type_identifier error ';'
   57                      | . error identifiers_list ';'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    error      shift, and go to state 39
    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "return"   shift, and go to state 42
    "if"       shift, and go to state 43
    "while"    shift, and go to state 44
    "write"    shift, and go to state 45
    "read"     shift, and go to state 46
    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49
    '{'        shift, and go to state 50

    type_identifier        go to state 51
    statments              go to state 52
    statment               go to state 53
    read                   go to state 54
    write                  go to state 55
    function_call          go to state 56
    conditional            go to state 57
    if                     go to state 58
    loop                   go to state 59
    retrn                  go to state 60
    value                  go to state 61
    array_access           go to state 62
    variables_declaration  go to state 63
    expression             go to state 64
    expression_1           go to state 65
    expression_2           go to state 66
    expression_3           go to state 67
    number                 go to state 68


State 28

    8 function_definition: function_declaration error function_body .

    $default  reduce using rule 8 (function_definition)


State 29

   12 parameters: '(' ')' .

    $default  reduce using rule 12 (parameters)


State 30

   11 parameters: '(' parameters_list . ')'

    ')'  shift, and go to state 69


State 31

   13 parameters_list: parameter . ',' parameters_list
   14                | parameter .  [')']

    ','  shift, and go to state 70

    $default  reduce using rule 14 (parameters_list)


State 32

   15 parameter: type_identifier . "id"
   16          | type_identifier . "id" '[' ']'

    "id"  shift, and go to state 71


State 33

    5 function_definition: function_declaration parameters function_body .

    $default  reduce using rule 5 (function_definition)


State 34

   56 variables_declaration: type_identifier error ';' .

    $default  reduce using rule 56 (variables_declaration)


State 35

   55 variables_declaration: type_identifier identifiers_list ';' .

    $default  reduce using rule 55 (variables_declaration)


State 36

   59 identifiers_list: "id" '[' "integer" . ']' ',' identifiers_list
   60                 | "id" '[' "integer" . ']'

    ']'  shift, and go to state 72


State 37

   58 identifiers_list: "id" ',' identifiers_list .

    $default  reduce using rule 58 (identifiers_list)


State 38

    7 function_definition: error $@1 parameters function_body .

    $default  reduce using rule 7 (function_definition)


State 39

   30 statment: error .  [error, "integer", "float", "return", "if", "while", "write", "read", "type", "arrayOp", "id", "uop", '(', '{', '}']
   57 variables_declaration: error . identifiers_list ';'
   58 identifiers_list: . "id" ',' identifiers_list
   59                 | . "id" '[' "integer" ']' ',' identifiers_list
   60                 | . "id" '[' "integer" ']'
   61                 | . "id"

    "id"  shift, and go to state 10

    "id"      [reduce using rule 30 (statment)]
    $default  reduce using rule 30 (statment)

    identifiers_list  go to state 12


State 40

   75 number: "integer" .

    $default  reduce using rule 75 (number)


State 41

   76 number: "float" .

    $default  reduce using rule 76 (number)


State 42

   34 function_call: . "id" $@3 '(' arguments ')'
   48 retrn: "return" . expression ';'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 73
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 43

   42 if: "if" . '(' expression ')'

    '('  shift, and go to state 74


State 44

   46 $@6: . %empty
   47 loop: "while" . $@6 '(' expression ')' '{' statments '}'

    $default  reduce using rule 46 ($@6)

    $@6  go to state 75


State 45

   32 write: "write" . "id" ';'

    "id"  shift, and go to state 76


State 46

   31 read: "read" . "id" ';'

    "id"  shift, and go to state 77


State 47

   33 $@3: . %empty  ['(']
   34 function_call: "id" . $@3 '(' arguments ')'
   49 value: "id" .  ["op1", "op2", "op3", ')', ']', ';', ',']
   53 array_access: "id" . '[' expression ']'
   54             | "id" . '[' expression ',' expression ']'
   62 expression: "id" . assignment expression
   74 assignment: . "assignment"

    "assignment"  shift, and go to state 78
    '['           shift, and go to state 79

    '('       reduce using rule 33 ($@3)
    $default  reduce using rule 49 (value)

    $@3         go to state 80
    assignment  go to state 81


State 48

   34 function_call: . "id" $@3 '(' arguments ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   70 expression_3: "uop" . value
   71             | "uop" . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 82
    '('        shift, and go to state 83

    function_call  go to state 56
    value          go to state 84
    array_access   go to state 85
    number         go to state 68


State 49

   34 function_call: . "id" $@3 '(' arguments ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   73             | '(' . expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 86
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 50

   20 $@2: . %empty
   21 statments: '{' . $@2 statments '}'

    $default  reduce using rule 20 ($@2)

    $@2  go to state 87


State 51

   55 variables_declaration: type_identifier . identifiers_list ';'
   56                      | type_identifier . error ';'
   58 identifiers_list: . "id" ',' identifiers_list
   59                 | . "id" '[' "integer" ']' ',' identifiers_list
   60                 | . "id" '[' "integer" ']'
   61                 | . "id"

    error  shift, and go to state 19
    "id"   shift, and go to state 10

    identifiers_list  go to state 21


State 52

   10 function_body: '{' statments . '}'

    '}'  shift, and go to state 88


State 53

   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"
   19 statments: . statment statments
   19          | statment . statments
   21          | . '{' $@2 statments '}'
   22          | . statment
   22          | statment .  ['}']
   23 statment: . variables_declaration
   24         | . retrn
   25         | . conditional
   26         | . loop
   27         | . expression ';'
   28         | . read
   29         | . write
   30         | . error
   31 read: . "read" "id" ';'
   32 write: . "write" "id" ';'
   34 function_call: . "id" $@3 '(' arguments ')'
   40 conditional: . if '{' statments '}' $@4 else_if
   41            | . if '{' statments '}'
   42 if: . "if" '(' expression ')'
   47 loop: . "while" $@6 '(' expression ')' '{' statments '}'
   48 retrn: . "return" expression ';'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   55 variables_declaration: . type_identifier identifiers_list ';'
   56                      | . type_identifier error ';'
   57                      | . error identifiers_list ';'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    error      shift, and go to state 39
    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "return"   shift, and go to state 42
    "if"       shift, and go to state 43
    "while"    shift, and go to state 44
    "write"    shift, and go to state 45
    "read"     shift, and go to state 46
    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49
    '{'        shift, and go to state 50

    '}'  reduce using rule 22 (statments)

    type_identifier        go to state 51
    statments              go to state 89
    statment               go to state 53
    read                   go to state 54
    write                  go to state 55
    function_call          go to state 56
    conditional            go to state 57
    if                     go to state 58
    loop                   go to state 59
    retrn                  go to state 60
    value                  go to state 61
    array_access           go to state 62
    variables_declaration  go to state 63
    expression             go to state 64
    expression_1           go to state 65
    expression_2           go to state 66
    expression_3           go to state 67
    number                 go to state 68


State 54

   28 statment: read .

    $default  reduce using rule 28 (statment)


State 55

   29 statment: write .

    $default  reduce using rule 29 (statment)


State 56

   52 value: function_call .

    $default  reduce using rule 52 (value)


State 57

   25 statment: conditional .

    $default  reduce using rule 25 (statment)


State 58

   40 conditional: if . '{' statments '}' $@4 else_if
   41            | if . '{' statments '}'

    '{'  shift, and go to state 90


State 59

   26 statment: loop .

    $default  reduce using rule 26 (statment)


State 60

   24 statment: retrn .

    $default  reduce using rule 24 (statment)


State 61

   69 expression_3: value . "op3" expression_3
   72             | value .  ["op1", "op2", ')', ']', ';', ',']

    "op3"  shift, and go to state 91

    $default  reduce using rule 72 (expression_3)


State 62

   51 value: array_access .  ["op1", "op2", "op3", ')', ']', ';', ',']
   63 expression: array_access . assignment expression
   74 assignment: . "assignment"

    "assignment"  shift, and go to state 78

    $default  reduce using rule 51 (value)

    assignment  go to state 92


State 63

   23 statment: variables_declaration .

    $default  reduce using rule 23 (statment)


State 64

   27 statment: expression . ';'

    ';'  shift, and go to state 93


State 65

   64 expression: expression_1 .

    $default  reduce using rule 64 (expression)


State 66

   65 expression_1: expression_2 . "op1" expression_1
   66             | expression_2 .  [')', ']', ';', ',']

    "op1"  shift, and go to state 94

    $default  reduce using rule 66 (expression_1)


State 67

   67 expression_2: expression_3 . "op2" expression_2
   68             | expression_3 .  ["op1", ')', ']', ';', ',']

    "op2"  shift, and go to state 95

    $default  reduce using rule 68 (expression_2)


State 68

   50 value: number .

    $default  reduce using rule 50 (value)


State 69

   11 parameters: '(' parameters_list ')' .

    $default  reduce using rule 11 (parameters)


State 70

   13 parameters_list: . parameter ',' parameters_list
   13                | parameter ',' . parameters_list
   14                | . parameter
   15 parameter: . type_identifier "id"
   16          | . type_identifier "id" '[' ']'
   17 type_identifier: . "arrayOp" "arrayType"
   18                | . "type"

    "type"     shift, and go to state 2
    "arrayOp"  shift, and go to state 3

    parameters_list  go to state 96
    parameter        go to state 31
    type_identifier  go to state 32


State 71

   15 parameter: type_identifier "id" .  [')', ',']
   16          | type_identifier "id" . '[' ']'

    '['  shift, and go to state 97

    $default  reduce using rule 15 (parameter)


State 72

   59 identifiers_list: "id" '[' "integer" ']' . ',' identifiers_list
   60                 | "id" '[' "integer" ']' .  [';']

    ','  shift, and go to state 98

    $default  reduce using rule 60 (identifiers_list)


State 73

   48 retrn: "return" expression . ';'

    ';'  shift, and go to state 99


State 74

   34 function_call: . "id" $@3 '(' arguments ')'
   42 if: "if" '(' . expression ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 100
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 75

   47 loop: "while" $@6 . '(' expression ')' '{' statments '}'

    '('  shift, and go to state 101


State 76

   32 write: "write" "id" . ';'

    ';'  shift, and go to state 102


State 77

   31 read: "read" "id" . ';'

    ';'  shift, and go to state 103


State 78

   74 assignment: "assignment" .

    $default  reduce using rule 74 (assignment)


State 79

   34 function_call: . "id" $@3 '(' arguments ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   53             | "id" '[' . expression ']'
   54             | . "id" '[' expression ',' expression ']'
   54             | "id" '[' . expression ',' expression ']'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 104
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 80

   34 function_call: "id" $@3 . '(' arguments ')'

    '('  shift, and go to state 105


State 81

   34 function_call: . "id" $@3 '(' arguments ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   62 expression: . "id" assignment expression
   62           | "id" assignment . expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 106
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 82

   33 $@3: . %empty  ['(']
   34 function_call: "id" . $@3 '(' arguments ')'
   49 value: "id" .  ["op1", "op2", "op3", ')', ']', ';', ',']
   53 array_access: "id" . '[' expression ']'
   54             | "id" . '[' expression ',' expression ']'

    '['  shift, and go to state 79

    '('       reduce using rule 33 ($@3)
    $default  reduce using rule 49 (value)

    $@3  go to state 80


State 83

   34 function_call: . "id" $@3 '(' arguments ')'
   49 value: . "id"
   50      | . number
   51      | . array_access
   52      | . function_call
   53 array_access: . "id" '[' expression ']'
   54             | . "id" '[' expression ',' expression ']'
   62 expression: . "id" assignment expression
   63           | . array_access assignment expression
   64           | . expression_1
   65 expression_1: . expression_2 "op1" expression_1
   66             | . expression_2
   67 expression_2: . expression_3 "op2" expression_2
   68             | . expression_3
   69 expression_3: . value "op3" expression_3
   70             | . "uop" value
   71             | . "uop" '(' expression ')'
   71             | "uop" '(' . expression ')'
   72             | . value
   73             | . '(' expression ')'
   75 number: . "integer"
   76       | . "float"

    "integer"  shift, and go to state 40
    "float"    shift, and go to state 41
    "id"       shift, and go to state 47
    "uop"      shift, and go to state 48
    '('        shift, and go to state 49

    function_call  go to state 56
    value          go to state 61
    array_access   go to state 62
    expression     go to state 107
    expression_1   go to state 65
    expression_2   go to state 66
    expression_3   go to state 67
    number         go to state 68


State 84

   70 expression_3: "uop" value .

    $default  reduce using rule 70 (expression_3)


State 85

   51 value: array_access .

    $default  reduce using rule 51 (value)


State 86

   73 expression_3: '(' expression . ')'

    ')'  shift, and go to state 108


State 87
